propagate error message through to API
